--- a/index.html
+++ b/index.html
@@ -37,25 +37,24 @@
 
     <body>
         <header class="main-header">
-            <div class="header-grid">
-                <div class="logo-section">
-                    <h1 class="main-logo">LOS</h1>
-                    <div class="logo-subtitle">Lack of Sleep</div>
-                </div>
+            <div class="header-content">
+                <h1 class="event-title">Lack of Sleepと<br>寝不足にならNight 10</h1>
+                <img src="image/header.jpeg" alt="LOSと寝不足にならNight 10 イメージ画像" class="header-image">
 
                 <div class="event-details">
-                    <h2 class="details-title">寝不足にならNight 10</h2>
                     <div class="detail-item">
                         <span class="detail-label">📅 開催日</span>
                         <span class="detail-value">12月16日(月)・17日(火)</span>
                     </div>
                     <div class="detail-item">
-                        <span class="detail-label">🏢 会場</span>
-                        <span class="detail-value">LIVE HOUSE ANGA</span>
+                        <span class="detail-label">⏰ 時間</span>
+                        <span class="detail-value">両日 16:30〜21:00</span>
                     </div>
                     <div class="detail-item">
-                        <span class="detail-label">⏰ 時間</span>
-                        <span class="detail-value">16:30〜21:00</span>
+                        <span class="detail-label">🏢 会場</span>
+                        <span class="detail-value">
+                            <a href="https://maps.app.goo.gl/SB4E1KRaYwLC7emr6" target="_blank" rel="noopener" class="venue-link" target="_blank" rel="noopener" class="venue-link">LIVE HOUSE ANGA</a>
+                        </span>
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">💰 料金</span>
@@ -63,20 +62,6 @@
                     </div>
                     <div class="free-notice">
                         ✨ 高校生以下無料 ✨
-                    </div>
-                </div>
-
-                <div class="venue-section">
-                    <div class="venue-card">
-                        <h3 class="venue-title">会場案内</h3>
-                        <div class="venue-info">
-                            〒260-0015<br>
-                            千葉市中央区富士見<br>
-                            2-16-4-B1F<br>
-                            <a href="https://anga-hp.com/" target="_blank" rel="noopener" class="venue-link">公式サイト</a><br>
-                            <a href="https://maps.app.goo.gl/SB4E1KRaYwLC7emr6" target="_blank" rel="noopener" class="venue-link">地図</a><br>
-                            <strong class="venue-tel">TEL: 043-224-7769</strong>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -281,9 +266,10 @@
                 </div>
             </section>
 
-            <!-- 右サイドバー: 統計と注意事項 -->
+            <!-- 右サイドバー: 統計のみ -->
             <aside class="info-sidebar">
-                <div class="info-card sticky">
+                <!-- 統計部分のみ -->
+                <div class="info-card sticky stats-container">
                     <h3 class="info-card-title">イベント統計</h3>
                     <div class="stats-grid">
                         <div class="stat-item">
@@ -302,18 +288,6 @@
                             <span class="stat-number">65+</span>
                             <span class="stat-label">演奏楽曲</span>
                         </div>
-                    </div>
-
-                    <div class="notes-section">
-                        <h4 class="notes-title">📝 注意事項</h4>
-                        <ul class="notes-list">
-                            <li>両日16:30〜21:00頃の開催</li>
-                            <li>チケット1,000円（1ドリンク付）</li>
-                            <li>高校生以下は無料</li>
-                            <li>途中入場・退席OK</li>
-                            <li>いろんなバンドをお楽しみください</li>
-                            <li>武器や防具は装備が必要です</li>
-                        </ul>
                     </div>
                 </div>
             </aside>
