--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="event-details">
                     <div class="detail-item">
                         <span class="detail-label">📅 開催日</span>
-                        <span class="detail-value">12月16日(月)・17日(火)</span>
+                        <span class="detail-value">9月29日(月)・30日(火)</span>
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">⏰ 時間</span>
@@ -53,7 +53,7 @@
                     <div class="detail-item">
                         <span class="detail-label">🏢 会場</span>
                         <span class="detail-value">
-                            <a href="https://maps.app.goo.gl/SB4E1KRaYwLC7emr6" target="_blank" rel="noopener" class="venue-link" target="_blank" rel="noopener" class="venue-link">LIVE HOUSE ANGA</a>
+                            <a href="https://maps.app.goo.gl/SB4E1KRaYwLC7emr6" target="_blank" rel="noopener" class="venue-link">LIVE HOUSE ANGA</a>
                         </span>
                     </div>
                     <div class="detail-item">
@@ -93,14 +93,14 @@
 
             <!-- 中央: メインプログラム -->
             <section class="main-program">
-                <!-- 12月16日 -->
+                <!-- 9月29日 -->
                 <div class="day-container">
-                    <h2 class="day-header">12月16日(月)</h2>
+                    <h2 class="day-header">9月29日(月)</h2>
                     <div class="programs-list">
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">AIR SECTION</h3>
+                                <h3 class="band-name">博多山Z</h3>
                                 <div class="time-slot">17:00</div>
                             </div>
                             <div class="songs-compact">
@@ -144,51 +144,31 @@
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">ザ・ナメロウズ</h3>
+                                <h3 class="band-name">川倉ヒロヨシとBLUE SKY</h3>
                                 <div class="time-slot">19:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">多分風</div>
-                                <div class="song-compact">アルクアラウンド</div>
-                                <div class="song-compact">忘れられないの</div>
-                                <div class="song-compact">新宝島</div>
-                                <div class="song-compact">夜の踊り子</div>
-                                <div class="song-compact">アイデンティティ</div>
+                                <div class="song-compact">what 's up people</div>
+                                <div class="song-compact">F</div>
+                                <div class="song-compact">爪爪爪</div>
+                                <div class="song-compact">ロック番狂わせ</div>
+                                <div class="song-compact">シミ</div>
+                                <div class="song-compact">恋のメガラバ</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">博多 OF SLEEP</h3>
-                                <div class="time-slot">19:40</div>
+                                <h3 class="band-name">あにまるはんたーず2ndG</h3>
+                                <div class="time-slot">18:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ジターバグ</div>
-                                <div class="song-compact">RIVER</div>
-                                <div class="song-compact">スターフィッシュ</div>
-                                <div class="song-compact">風の日</div>
-                                <div class="song-compact">The Beginning</div>
-                                <div class="song-compact">HONEY</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 12月17日 -->
-                <div class="day-container">
-                    <h2 class="day-header">12月17日(火)</h2>
-                    <div class="programs-list">
-
-                        <div class="program-item">
-                            <div class="program-header">
-                                <h3 class="band-name">侵食ドルチェ</h3>
-                                <div class="time-slot">17:00</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">タイムパラドックス</div>
-                                <div class="song-compact">Don't say "lazy"</div>
-                                <div class="song-compact">God Knows...</div>
-                                <div class="song-compact">CHAINSAW BLOOD</div>
+                                <div class="song-compact">サムライハート</div>
+                                <div class="song-compact">SHAKE</div>
+                                <div class="song-compact">Livin'On a Prayer</div>
+                                <div class="song-compact">できっこないをやらなくちゃ</div>
+                                <div class="song-compact">大切なもの</div>
+                                <div class="song-compact">歩いて帰ろう</div>
                             </div>
                         </div>
 
@@ -206,40 +186,17 @@
                                 <div class="song-compact">GOOD LUCK MY WAY</div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <!-- 9月30日 -->
+                <div class="day-container">
+                    <h2 class="day-header">9月30日(火)</h2>
+                    <div class="programs-list">
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">あにまるはんたーず</h3>
-                                <div class="time-slot">18:20</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">サムライハート</div>
-                                <div class="song-compact">SHAKE</div>
-                                <div class="song-compact">Livin'On a Prayer</div>
-                                <div class="song-compact">できっこないをやらなくちゃ</div>
-                                <div class="song-compact">大切なもの</div>
-                                <div class="song-compact">歩いて帰ろう</div>
-                            </div>
-                        </div>
-
-                        <div class="program-item">
-                            <div class="program-header">
-                                <h3 class="band-name">川倉ヒロヨシとブルースカイ</h3>
-                                <div class="time-slot">19:00</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">what 's up people</div>
-                                <div class="song-compact">F</div>
-                                <div class="song-compact">爪爪爪</div>
-                                <div class="song-compact">ロック番狂わせ</div>
-                                <div class="song-compact">シミ</div>
-                                <div class="song-compact">恋のメガラバ</div>
-                            </div>
-                        </div>
-
-                        <div class="program-item">
-                            <div class="program-header">
-                                <h3 class="band-name">ホンキッキーズ&梨音</h3>
+                                <h3 class="band-name">ホンキッキーズ</h3>
                                 <div class="time-slot">19:40</div>
                             </div>
                             <div class="songs-compact">
@@ -253,7 +210,44 @@
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">みやかわだいきと愉快な仲間たち</h3>
+                                <h3 class="band-name">侵食DOLCE</h3>
+                                <div class="time-slot">17:00</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">タイムパラドックス</div>
+                                <div class="song-compact">Don't say "lazy"</div>
+                                <div class="song-compact">God Knows...</div>
+                                <div class="song-compact">CHAINSAW BLOOD</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">DEVIL SOLDIERS</h3>
+                                <div class="time-slot">20:20</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">前前前世</div>
+                                <div class="song-compact">ジターバグ</div>
+                                <div class="song-compact">melodic storm</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">ふ〜た〜ず★</h3>
+                                <div class="time-slot">20:20</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">前前前世</div>
+                                <div class="song-compact">ジターバグ</div>
+                                <div class="song-compact">melodic storm</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">船橋スカパラダイスオーケストラ</h3>
                                 <div class="time-slot">20:20</div>
                             </div>
                             <div class="songs-compact">
