--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 
                 <div class="event-details">
                     <div class="detail-item">
-                        <span class="detail-label">📅 開催日</span>
+                        <span class="detail-label">📅 Date</span>
                         <span class="detail-value">9月29日(月)・30日(火)</span>
                     </div>
                     <div class="detail-item">
-                        <span class="detail-label">⏰ 時間</span>
+                        <span class="detail-label">⏰ Time</span>
                         <span class="detail-value">両日 16:30〜21:00</span>
                     </div>
                     <div class="detail-item">
-                        <span class="detail-label">🏢 会場</span>
+                        <span class="detail-label">🏢 Place</span>
                         <span class="detail-value">
                             <a href="https://maps.app.goo.gl/SB4E1KRaYwLC7emr6" target="_blank" rel="noopener" class="venue-link">LIVE HOUSE ANGA</a>
                         </span>
                     </div>
                     <div class="detail-item">
-                        <span class="detail-label">💰 料金</span>
-                        <span class="detail-value">¥1,000 (1drink付)</span>
+                        <span class="detail-label">💰 Price</span>
+                        <span class="detail-value">1,000円（1ドリンク付）</span>
                     </div>
                     <div class="free-notice">
                         ✨ 高校生以下無料 ✨
@@ -291,9 +291,9 @@
             <div class="footer-content">
                 <div></div>
                 <div class="credits">
-                    <strong>主催：</strong>Lack of Sleep<br>
-                    <strong>協力：</strong>演者の皆さま&スタッフ<br>
-                    <strong>Special Thanks：</strong>ANGA、Lapin、来てくれたみんな
+                    <strong>Hosted by：</strong>Lack of Sleep<br>
+                    <strong>Supported by：</strong>演者の皆さま&スタッフ<br>
+                    <strong>Special Thanks</strong>ANGA、Lapin、来てくれたみんな
                 </div>
                 <div class="powered-by">Powered by LOS</div>
             </div>
