--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:locale" content="ja_JP">
         <meta name="robots" content="noindex">
         <title>Lack of Sleepと寝不足にならNight 10</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <style>
             /* 緊急時用のフォールバックCSS */
             body {
