--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" content="Lack of Sleepと寝不足にならNight 10">
-        <meta property="og:description" content="Lack of Sleepと寝不足にならNight 10開催">
+        <meta property="og:description" content="Lack of Sleepと寝不足にならNight 10開催決定">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="ja_JP">
         <meta name="robots" content="noindex">
@@ -293,7 +293,7 @@
                 <div class="credits">
                     <strong>Hosted by：</strong>Lack of Sleep<br>
                     <strong>Supported by：</strong>演者の皆さま&スタッフ<br>
-                    <strong>Special Thanks</strong>ANGA、Lapin、来てくれたみんな
+                    <strong>Special Thanks：</strong>ANGA、Lapin、来てくれたみんな
                 </div>
                 <div class="powered-by">Powered by LOS</div>
             </div>
