コメントを修正

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" content="Lack of Sleepと寝不足にならNight 10">
-        <meta property="og:description" content="Lack of Sleepと寝不足にならNight 10開催決定">
+        <meta property="og:description" content="Lack of Sleepと寝不足にならNight 10開催!!">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="ja_JP">
         <meta name="robots" content="noindex">
@@ -91,7 +91,7 @@
                 </div>
             </aside>
 
-            <!-- 中央: メインプログラム -->
+            <!-- 中央: プログラム -->
             <section class="main-program">
                 <!-- 9月29日 -->
                 <div class="day-container">
@@ -260,9 +260,9 @@
                 </div>
             </section>
 
-            <!-- 右サイドバー: 統計のみ -->
+            <!-- 右サイドバー: イベント統計 -->
             <aside class="info-sidebar">
-                <!-- 統計部分のみ -->
+                <!-- イベント統計 -->
                 <div class="info-card sticky stats-container">
                     <h3 class="info-card-title">イベント統計</h3>
                     <div class="stats-grid">
@@ -299,7 +299,6 @@
             </div>
         </footer>
 
-        <!-- Scripts -->
         <script src="js/animation.js"></script>
     </body>
 
