フォールバックCSSを削除

--- a/index.html
+++ b/index.html
@@ -12,27 +12,6 @@
         <meta name="robots" content="noindex">
         <title>Lack of Sleepと寝不足にならNight 10</title>
         <link rel="stylesheet" href="./css/style.css">
-        <style>
-            /* 緊急時用のフォールバックCSS */
-            body {
-                font-family: Arial, sans-serif;
-                background: #0d1117;
-                color: #f0f6fc;
-                margin: 0;
-            }
-
-            .main-header {
-                padding: 20px;
-                background: #161b22;
-                border-bottom: 1px solid #30363d;
-            }
-
-            .content-grid {
-                max-width: 1400px;
-                margin: 0 auto;
-                padding: 20px;
-            }
-        </style>
     </head>
 
     <body>
@@ -227,33 +206,39 @@
                                 <div class="time-slot">20:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">前前前世</div>
-                                <div class="song-compact">ジターバグ</div>
-                                <div class="song-compact">melodic storm</div>
+                                <div class="song-compact">Smells Like Teen Spirit</div>
+                                <div class="song-compact">Paranoid</div>
+                                <div class="song-compact">Master of Puppets</div>
+                                <div class="song-compact">Back in Black</div>
+                                <div class="song-compact">Thunderstruck</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">ふ〜た〜ず★</h3>
-                                <div class="time-slot">20:20</div>
+                                <div class="time-slot">18:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">前前前世</div>
-                                <div class="song-compact">ジターバグ</div>
-                                <div class="song-compact">melodic storm</div>
+                                <div class="song-compact">白日</div>
+                                <div class="song-compact">マリーゴールド</div>
+                                <div class="song-compact">Pretender</div>
+                                <div class="song-compact">香水</div>
+                                <div class="song-compact">夜に駆ける</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">船橋スカパラダイスオーケストラ</h3>
-                                <div class="time-slot">20:20</div>
+                                <div class="time-slot">19:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">前前前世</div>
-                                <div class="song-compact">ジターバグ</div>
-                                <div class="song-compact">melodic storm</div>
+                                <div class="song-compact">美しく燃える森</div>
+                                <div class="song-compact">銀河と迷路</div>
+                                <div class="song-compact">DOWN BEAT STOMP</div>
+                                <div class="song-compact">スキャラバン</div>
+                                <div class="song-compact">ワンダフルツアー</div>
                             </div>
                         </div>
                     </div>
