--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">博多山Z</h3>
-                                <div class="time-slot">17:00</div>
+                                <div class="time-slot">16:30</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">裸の勇者</div>
@@ -95,7 +95,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">時計仕掛けのタヌキ</h3>
-                                <div class="time-slot">17:40</div>
+                                <div class="time-slot">17:10</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">曇天</div>
@@ -110,7 +110,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">デジタル5チャンネル</h3>
-                                <div class="time-slot">18:20</div>
+                                <div class="time-slot">17:50</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">愛のしるし</div>
@@ -124,7 +124,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">川倉ヒロヨシとBLUE SKY</h3>
-                                <div class="time-slot">19:00</div>
+                                <div class="time-slot">18:30</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">what 's up people</div>
@@ -139,7 +139,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">あにまるはんたーず2ndG</h3>
-                                <div class="time-slot">18:20</div>
+                                <div class="time-slot">19:10</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">サムライハート</div>
@@ -154,7 +154,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">P'INK-EN-CIEL</h3>
-                                <div class="time-slot">17:40</div>
+                                <div class="time-slot">19:50</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">Driver's High</div>
@@ -176,7 +176,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">ホンキッキーズ</h3>
-                                <div class="time-slot">19:40</div>
+                                <div class="time-slot">16:30</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">Tomorrow never knows</div>
@@ -190,7 +190,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">侵食DOLCE</h3>
-                                <div class="time-slot">17:00</div>
+                                <div class="time-slot">17:10</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">タイムパラドックス</div>
@@ -203,7 +203,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">DEVIL SOLDIERS</h3>
-                                <div class="time-slot">20:20</div>
+                                <div class="time-slot">17:50</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">Smells Like Teen Spirit</div>
@@ -217,7 +217,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">ふ〜た〜ず★</h3>
-                                <div class="time-slot">18:40</div>
+                                <div class="time-slot">18:30</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">白日</div>
@@ -231,7 +231,7 @@
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">船橋スカパラダイスオーケストラ</h3>
-                                <div class="time-slot">19:00</div>
+                                <div class="time-slot">19:10</div>
                             </div>
                             <div class="songs-compact">
                                 <div class="song-compact">美しく燃える森</div>
@@ -260,11 +260,11 @@
                             <span class="stat-label">開催日数</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">4.5</span>
-                            <span class="stat-label">公演時間</span>
+                            <span class="stat-number">7.5</span>
+                            <span class="stat-label">総公演時間</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">65+</span>
+                            <span class="stat-number">72</span>
                             <span class="stat-label">演奏楽曲</span>
                         </div>
                     </div>
