スケジュールの変更

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">⏰ Time</span>
-                        <span class="detail-value">両日 16:30〜21:00</span>
+                        <span class="detail-value">両日 16:20〜20:20</span>
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">🏢 Place</span>
@@ -79,90 +79,90 @@
 
                         <div class="program-item">
                             <div class="program-header">
+                                <h3 class="band-name">あにまるはんたーず2ndG</h3>
+                                <div class="time-slot">16:20</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">ダミー楽曲6</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
                                 <h3 class="band-name">博多山Z</h3>
-                                <div class="time-slot">16:30</div>
+                                <div class="time-slot">17:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">裸の勇者</div>
-                                <div class="song-compact">怪獣の花唄</div>
-                                <div class="song-compact">青のすみか</div>
-                                <div class="song-compact">follow me</div>
-                                <div class="song-compact">ドライフラワー</div>
-                                <div class="song-compact">第ゼロ感</div>
-                            </div>
-                        </div>
-
-                        <div class="program-item">
-                            <div class="program-header">
-                                <h3 class="band-name">時計仕掛けのタヌキ</h3>
-                                <div class="time-slot">17:10</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">曇天</div>
-                                <div class="song-compact">ハローフィクサー</div>
-                                <div class="song-compact">涙がこぼれそう</div>
-                                <div class="song-compact">ダイアモンド</div>
-                                <div class="song-compact">ギターと孤独と蒼い惑星</div>
-                                <div class="song-compact">拝啓、少年よ</div>
-                            </div>
-                        </div>
-
-                        <div class="program-item">
-                            <div class="program-header">
-                                <h3 class="band-name">デジタル5チャンネル</h3>
-                                <div class="time-slot">17:50</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">愛のしるし</div>
-                                <div class="song-compact">車輪の唄</div>
-                                <div class="song-compact">波乗りジョニー</div>
-                                <div class="song-compact">I'm in Love</div>
-                                <div class="song-compact">ワタリドリ</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">ダミー楽曲6</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">川倉ヒロヨシとBLUE SKY</h3>
-                                <div class="time-slot">18:30</div>
+                                <div class="time-slot">17:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">what 's up people</div>
-                                <div class="song-compact">F</div>
-                                <div class="song-compact">爪爪爪</div>
-                                <div class="song-compact">ロック番狂わせ</div>
-                                <div class="song-compact">シミ</div>
-                                <div class="song-compact">恋のメガラバ</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">ダミー楽曲6</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">あにまるはんたーず2ndG</h3>
-                                <div class="time-slot">19:10</div>
+                                <h3 class="band-name">デジタル5チャンネル</h3>
+                                <div class="time-slot">18:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">サムライハート</div>
-                                <div class="song-compact">SHAKE</div>
-                                <div class="song-compact">Livin'On a Prayer</div>
-                                <div class="song-compact">できっこないをやらなくちゃ</div>
-                                <div class="song-compact">大切なもの</div>
-                                <div class="song-compact">歩いて帰ろう</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">P'INK-EN-CIEL</h3>
-                                <div class="time-slot">19:50</div>
+                                <div class="time-slot">19:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">Driver's High</div>
-                                <div class="song-compact">MY HEART DRAWS A DREAM</div>
-                                <div class="song-compact">DAYBREAK'S BELL</div>
-                                <div class="song-compact">the Fourth Avenue Cafe</div>
-                                <div class="song-compact">C'est La Vie</div>
-                                <div class="song-compact">GOOD LUCK MY WAY</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">ダミー楽曲6</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">時計仕掛けのタヌキ</h3>
+                                <div class="time-slot">19:40</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">ダミー楽曲6</div>
                             </div>
                         </div>
                     </div>
@@ -175,70 +175,84 @@
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">ホンキッキーズ</h3>
-                                <div class="time-slot">16:30</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">Tomorrow never knows</div>
-                                <div class="song-compact">everybody goes</div>
-                                <div class="song-compact">over</div>
-                                <div class="song-compact">AM11:00</div>
-                                <div class="song-compact">シーソーゲーム 〜勇敢な恋の歌〜</div>
-                            </div>
-                        </div>
-
-                        <div class="program-item">
-                            <div class="program-header">
-                                <h3 class="band-name">侵食DOLCE</h3>
-                                <div class="time-slot">17:10</div>
-                            </div>
-                            <div class="songs-compact">
-                                <div class="song-compact">タイムパラドックス</div>
-                                <div class="song-compact">Don't say "lazy"</div>
-                                <div class="song-compact">God Knows...</div>
-                                <div class="song-compact">CHAINSAW BLOOD</div>
-                            </div>
-                        </div>
-
-                        <div class="program-item">
-                            <div class="program-header">
                                 <h3 class="band-name">DEVIL SOLDIERS</h3>
-                                <div class="time-slot">17:50</div>
+                                <div class="time-slot">16:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">Smells Like Teen Spirit</div>
-                                <div class="song-compact">Paranoid</div>
-                                <div class="song-compact">Master of Puppets</div>
-                                <div class="song-compact">Back in Black</div>
-                                <div class="song-compact">Thunderstruck</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">ホンキッキーズ</h3>
+                                <div class="time-slot">17:00</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">ふ〜た〜ず★</h3>
-                                <div class="time-slot">18:30</div>
+                                <div class="time-slot">17:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">白日</div>
-                                <div class="song-compact">マリーゴールド</div>
-                                <div class="song-compact">Pretender</div>
-                                <div class="song-compact">香水</div>
-                                <div class="song-compact">夜に駆ける</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
                                 <h3 class="band-name">船橋スカパラダイスオーケストラ</h3>
-                                <div class="time-slot">19:10</div>
+                                <div class="time-slot">18:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">美しく燃える森</div>
-                                <div class="song-compact">銀河と迷路</div>
-                                <div class="song-compact">DOWN BEAT STOMP</div>
-                                <div class="song-compact">スキャラバン</div>
-                                <div class="song-compact">ワンダフルツアー</div>
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">浸食DΘLCE</h3>
+                                <div class="time-slot">19:00</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">未定</h3>
+                                <div class="time-slot">19:40</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">ダミー楽曲1</div>
+                                <div class="song-compact">ダミー楽曲2</div>
+                                <div class="song-compact">ダミー楽曲3</div>
+                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">ダミー楽曲5</div>
                             </div>
                         </div>
                     </div>
@@ -252,7 +266,7 @@
                     <h3 class="info-card-title">イベント統計</h3>
                     <div class="stats-grid">
                         <div class="stat-item">
-                            <span class="stat-number">11</span>
+                            <span class="stat-number">12</span>
                             <span class="stat-label">出演バンド</span>
                         </div>
                         <div class="stat-item">
@@ -260,11 +274,11 @@
                             <span class="stat-label">開催日数</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">7.5</span>
+                            <span class="stat-number">8.0</span>
                             <span class="stat-label">総公演時間</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">72</span>
+                            <span class="stat-number">77</span>
                             <span class="stat-label">演奏楽曲</span>
                         </div>
                     </div>
